--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "component",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://danleks.github.io/component/",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node ./node_modules/vue-gh-pages/index.js"
   },
   "dependencies": {
     "vue": "^2.5.17"
@@ -16,6 +18,7 @@
     "@vue/cli-service": "^3.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-gh-pages": "^1.18.2",
     "vue-template-compiler": "^2.5.17"
   }
 }
